[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Door/Door.gd" type="Script" id=1]
[ext_resource path="res://Kenney/Singles/Door/door.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 35 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 35 )

[sub_resource type="Animation" id=3]
resource_name = "DoorOpen"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("DoorSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 0.5, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DoorSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -22.5, 0 ) ]
}

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="DoorSprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoorSprite"]
root_node = NodePath("../..")
reset_on_save = false
anims/DoorOpen = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
